--- a/src/App.css
+++ b/src/App.css
@@ -2,4 +2,26 @@ div {
   border: 1px solid grey;
   margin: 5px;
   padding: 5px;
+  text-align: center;
+  align-items: center;
 }
+
+.floorplan {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.upper-half {
+  display: flex;
+}
+
+.lower-half {
+  display: flex;
+}
+
+.oven-sink {
+  display: flex;
+}
+
