--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,21 @@
+body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  margin: 0;
+  color: white;
+}
+
+#root {
+  width: 80%;
+  height: 80vh;
+}
+
 div {
-  border: 1px solid grey;
+  /* border: 1px solid grey;
   margin: 5px;
-  padding: 5px;
+  padding: 5px; */
   text-align: center;
   align-items: center;
 }
@@ -11,17 +25,99 @@ div {
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  height: 100%;
 }
 
 .upper-half {
   display: flex;
+  width: 100%;
+  height: 60%;
+}
+
+.upper-left {
+  width: 40%;
+  height: 100%;
+}
+
+.upper-right {
+  width: 20%;
+  height: 100%;
 }
 
 .lower-half {
   display: flex;
+  height: 40%;
+  width: 100%;
 }
 
 .oven-sink {
   display: flex;
+  height: 15%;
+  width: 100%;
+}
+
+.upper-left > .bedroom {
+  height: 70%;
+}
+
+.upper-left > .bath {
+  height: 30%;
+}
+
+
+.lower-half > .bedroom {
+  width: 40%;
+  height: 100%;
+}
+
+.lower-half > .bath {
+  width: 20%;
+  height: 100%;
+}
+
+.bedroom {
+  background-color: teal;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.bath {
+  background-color: olivedrab;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.living {
+  background-color:tan;
+  width: 40%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.kitchen {
+  background-color: orange;
+  height: 85%;
+  display: flex;
+  justify-content: center;
+}
+
+.oven {
+  background-color: brown;
+  width: 50%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.sink {
+  background-color: sienna;
+  width: 50%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
 }
 
